--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.63.0",
     "@typescript-eslint/parser": "^8.19.1",
+    "clsx": "^2.1.1",
     "next": "15.1.4",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
